istio/02-namespace.yaml
# -- Create a nemespace for all the ingress-nginx components
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
