istio/04-bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: bookinfo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 443
        name: https
        protocol: HTTP
      hosts:
        - "*"
#    - port:
#        number: 10022
#        name: gitlab-ssh
#        protocol: TCP
#      hosts:
#        - "*"
#    - port:
#        number: 25
#        name: mail-25
#        protocol: TCP
#      hosts:
#        - "*"
#    - port:
#        number: 465
#        name: mail-465
#        protocol: TCP
#      hosts:
#        - "*"
#    - port:
#        number: 587
#        name: mail-587
#        protocol: TCP
#      hosts:
#        - "*"
#    - port:
#        number: 143
#        name: mail-143
#        protocol: TCP
#      hosts:
#        - "*"
#    - port:
#        number: 993
#        name: mail-993
#        protocol: TCP
#      hosts:
#        - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
  namespace: bookinfo
spec:
  hosts:
    - "*"
  gateways:
    - bookinfo-gateway
  http:
    - match:
        - uri:
            exact: /productpage
        - uri:
            exact: /login
        - uri:
            exact: /logout
        - uri:
            prefix: /static
      route:
        - destination:
            host: productpage.bookinfo.svc.cluster.local
            port:
              number: 9080
---
