istio/04-demoapp.yaml
# -- Create a nemespace for all the ingress-nginx components
apiVersion: v1
kind: Namespace
metadata:
  name: echoserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: echoserver
spec:
  replicas: 4
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
        version: 1.0
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - image: gcr.io/google_containers/echoserver:1.0
          imagePullPolicy: Always
          name: echoserver
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: echoserver
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: echoserver
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: echoserver
  namespace: echoserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "s3.antimatter-studios.com"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver
  namespace: echoserver
spec:
  hosts:
    - "s3.antimatter-studios.com"
  gateways:
    - echoserver
  http:
    - route:
        - destination:
            host: echoserver
            port:
              number: 80
---
