istio/05-antimatter-studios.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: antimatter-studios
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "antimatter-studios.com"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice
  namespace: antimatter-studios
spec:
  hosts:
    - "antimatter-studios.com"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: antimatter-studios
            port:
              number: 80
---
